<?xml version="1.0"?>
<package format="2">
  <name>vsx_protocol_driver</name>
  <version>0.0.1</version>
  <description>The vsx_protocol_driver package</description>

  <maintainer email="daniel.dsouza@swri.org">Daniel D'Souza</maintainer>

  <license>SwRI Propritary</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/vsx_protocol_driver</url> -->


  <author email="daniel.dsouza@swri.org">Daniel D'Souza</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent />
  </export>
</package>
