<?xml version="1.0"?>
<package format="2">
  <name>vsx_protocol_driver_ros</name>
  <version>0.0.0</version>
  <description>The vsx_protocol_driver_ros package</description>

  <maintainer email="daniel.dsouza@swri.org">Daniel D'Souza</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/vsx_protocol_driver_ros</url> -->

  <author email="daniel.dsouza@swri.org">Daniel D'Souza</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>
  <depend>pcl</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>swri_nodelet</depend>
  <depend>vsx_protocol_driver</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>